--- a/testdata/expected.html
+++ b/testdata/expected.html
@@ -69,6 +69,7 @@ div.styled-table {
         <li><a href="#metrics-summary">Metrics summary</a></li>
         <li><a href="#top-5-runs">Top 5 runs</a></li>
         <li><a href="#run-comparison">Run comparison</a></li>
+        <li><a href="#cpu-time-distribution-among-operators">CPU time distribution among operators</a></li>
     </ol>
     <h2 id="validate-environments">Validate environments</h2>
     <p>For every environment, check for statistical outliers on every metric across all executions of every run of every benchmark.
@@ -15022,5 +15023,179 @@ show mean duration across all environments.</p>
         </tbody>
     </table>
 </div>
+    <h2 id="cpu-time-distribution-among-operators">CPU time distribution among operators</h2>
+    <p>This graph presents what fraction of CPU time was consumed by particular operator, e.g. "ScanFilterAndProjectOperator, 0.68"
+means that ScanFilterAndProjectOperator used 68% of the CPU time used when executing a query</p>
+    <p>
+        <a href="https://github.com/starburstdata/benchmark-reports/blob/x/sql/50-compare-weighted-cpu-time-operators.sql">Query</a>
+    </p>
+        <div class="styled-table">
+    <table class="styled-table">
+        <thead>
+            <tr>
+                <th class="align-left">Env Name</th>
+                <th class="align-left">Operator Type</th>
+                <th class="align-right">Avg Operator Cpu Time</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    ScanFilterAndProjectOperator
+                </td>
+                <td class="align-right numeric">
+                    0.40
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    HashBuilderOperator
+                </td>
+                <td class="align-right numeric">
+                    0.27
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    PartitionedOutputOperator
+                </td>
+                <td class="align-right numeric">
+                    0.15
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    LocalExchangeSinkOperator
+                </td>
+                <td class="align-right numeric">
+                    0.08
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    LookupJoinOperator
+                </td>
+                <td class="align-right numeric">
+                    0.04
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    ExchangeOperator
+                </td>
+                <td class="align-right numeric">
+                    0.04
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    LocalExchangeSourceOperator
+                </td>
+                <td class="align-right numeric">
+                    0.00
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    DynamicFilterSourceOperator
+                </td>
+                <td class="align-right numeric">
+                    0.00
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    FilterAndProjectOperator
+                </td>
+                <td class="align-right numeric">
+                    0.00
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    HashAggregationOperator
+                </td>
+                <td class="align-right numeric">
+                    0.00
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    OrderByOperator
+                </td>
+                <td class="align-right numeric">
+                    0.00
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    LocalMergeSourceOperator
+                </td>
+                <td class="align-right numeric">
+                    0.00
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    MergeOperator
+                </td>
+                <td class="align-right numeric">
+                    0.00
+                </td>
+            </tr>
+            <tr>
+                <td class="align-left">
+                    trino-398-60c91ef-1
+                </td>
+                <td class="align-left">
+                    TaskOutputOperator
+                </td>
+                <td class="align-right numeric">
+                    0.00
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+        <div>                            <div id="00000007-1111-1111-1111-222222222222" class="plotly-graph-div" style="height:100%; width:100%;"></div>            <script type="text/javascript">                                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById("00000007-1111-1111-1111-222222222222")) {                    Plotly.newPlot(                        "00000007-1111-1111-1111-222222222222",                        [{"hovertext":["","","","","","","","","","","","","",""],"name":"Env Name: trino-398-60c91ef-1 Avg Operator Cpu Time","x":["ScanFilterAndProjectOperator","HashBuilderOperator","PartitionedOutputOperator","LocalExchangeSinkOperator","LookupJoinOperator","ExchangeOperator","LocalExchangeSourceOperator","DynamicFilterSourceOperator","FilterAndProjectOperator","HashAggregationOperator","OrderByOperator","LocalMergeSourceOperator","MergeOperator","TaskOutputOperator"],"y":[0.4,0.27,0.15,0.08,0.04,0.04,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0],"type":"bar"}],                        {"template":{"data":{"histogram2dcontour":[{"type":"histogram2dcontour","colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"choropleth":[{"type":"choropleth","colorbar":{"outlinewidth":0,"ticks":""}}],"histogram2d":[{"type":"histogram2d","colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"heatmap":[{"type":"heatmap","colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"heatmapgl":[{"type":"heatmapgl","colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"contourcarpet":[{"type":"contourcarpet","colorbar":{"outlinewidth":0,"ticks":""}}],"contour":[{"type":"contour","colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"surface":[{"type":"surface","colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"mesh3d":[{"type":"mesh3d","colorbar":{"outlinewidth":0,"ticks":""}}],"scatter":[{"fillpattern":{"fillmode":"overlay","size":10,"solidity":0.2},"type":"scatter"}],"parcoords":[{"type":"parcoords","line":{"colorbar":{"outlinewidth":0,"ticks":""}}}],"scatterpolargl":[{"type":"scatterpolargl","marker":{"colorbar":{"outlinewidth":0,"ticks":""}}}],"bar":[{"error_x":{"color":"#2a3f5f"},"error_y":{"color":"#2a3f5f"},"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"bar"}],"scattergeo":[{"type":"scattergeo","marker":{"colorbar":{"outlinewidth":0,"ticks":""}}}],"scatterpolar":[{"type":"scatterpolar","marker":{"colorbar":{"outlinewidth":0,"ticks":""}}}],"histogram":[{"marker":{"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"histogram"}],"scattergl":[{"type":"scattergl","marker":{"colorbar":{"outlinewidth":0,"ticks":""}}}],"scatter3d":[{"type":"scatter3d","line":{"colorbar":{"outlinewidth":0,"ticks":""}},"marker":{"colorbar":{"outlinewidth":0,"ticks":""}}}],"scattermapbox":[{"type":"scattermapbox","marker":{"colorbar":{"outlinewidth":0,"ticks":""}}}],"scatterternary":[{"type":"scatterternary","marker":{"colorbar":{"outlinewidth":0,"ticks":""}}}],"scattercarpet":[{"type":"scattercarpet","marker":{"colorbar":{"outlinewidth":0,"ticks":""}}}],"carpet":[{"aaxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"baxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"type":"carpet"}],"table":[{"cells":{"fill":{"color":"#EBF0F8"},"line":{"color":"white"}},"header":{"fill":{"color":"#C8D4E3"},"line":{"color":"white"}},"type":"table"}],"barpolar":[{"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"barpolar"}],"pie":[{"automargin":true,"type":"pie"}]},"layout":{"autotypenumbers":"strict","colorway":["#636efa","#EF553B","#00cc96","#ab63fa","#FFA15A","#19d3f3","#FF6692","#B6E880","#FF97FF","#FECB52"],"font":{"color":"#2a3f5f"},"hovermode":"closest","hoverlabel":{"align":"left"},"paper_bgcolor":"white","plot_bgcolor":"#E5ECF6","polar":{"bgcolor":"#E5ECF6","angularaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"radialaxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"ternary":{"bgcolor":"#E5ECF6","aaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"baxis":{"gridcolor":"white","linecolor":"white","ticks":""},"caxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"coloraxis":{"colorbar":{"outlinewidth":0,"ticks":""}},"colorscale":{"sequential":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"sequentialminus":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"diverging":[[0,"#8e0152"],[0.1,"#c51b7d"],[0.2,"#de77ae"],[0.3,"#f1b6da"],[0.4,"#fde0ef"],[0.5,"#f7f7f7"],[0.6,"#e6f5d0"],[0.7,"#b8e186"],[0.8,"#7fbc41"],[0.9,"#4d9221"],[1,"#276419"]]},"xaxis":{"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","automargin":true,"zerolinewidth":2},"yaxis":{"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","automargin":true,"zerolinewidth":2},"scene":{"xaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white","gridwidth":2},"yaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white","gridwidth":2},"zaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white","gridwidth":2}},"shapedefaults":{"line":{"color":"#2a3f5f"}},"annotationdefaults":{"arrowcolor":"#2a3f5f","arrowhead":0,"arrowwidth":1},"geo":{"bgcolor":"white","landcolor":"#E5ECF6","subunitcolor":"white","showland":true,"showlakes":true,"lakecolor":"white"},"title":{"x":0.05},"mapbox":{"style":"light"}}},"yaxis":{"tickformat":".2%"},"title":{"text":""},"barmode":"group"},                        {"responsive": true}                    )                };                            </script>        </div>
 </body>
 </html>
